<resources>
    <string name="app_name">WarehouseApp</string>
    <string name="nameApp">GudangKu</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="createAccount">"Create New Account "</string>
    <string name="loginAccount">Already Have Account? Login Here</string>
    <string name="add">Add</string>
    <string name="code_warehouse">Code Warehouse</string>
    <string name="codeItem">Code Item</string>
    <string name="nameItem">Name Item</string>
    <string name="typeOfItem">Type Of Item</string>
    <string name="totalItems">Total Items</string>
    <string name="unit">Unit</string>
    <string name="save">Save</string>
    <string name="id">id</string>
    <string name="addData">Add loginData warehouse</string>
    <string name="userId">user id</string>
    <string name="welcome">Welcome</string>
    <string name="subWelcome">di Gudang Ku</string>
    <string name="textCard">Makanan-01</string>
    <string name="desc_text">Mie Goreng Original</string>
    <string name="title">Title</string>
    <string name="add_category">Add Category</string>
    <string name="edit_category">Edit Category</string>
    <string name="ask_del">Are you sure delete thi?</string>
    <string name="delete_category">Delete Category</string>
    <string name="idWarehouse">id</string>
    <string name="codeWarehouse">Code Warehouse</string>
    <string name="addWarehouse">Add Data Warehouse</string>
    <string name="totalStock">Total Stock</string>
    <string name="back"></string>
    <string name="logout">Logout</string>
    <string name="hello">Hello,</string>
</resources>