<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="6dp"
    app:cardElevation="3dp"
    app:cardPreventCornerOverlap="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="6dp">

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_codeWarehouse"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/code_warehouse"
                android:textSize="22sp"
                android:layout_weight="1"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/optionImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@null"
                android:src="@drawable/ic_more" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_codeItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/codeItem"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_nameItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameItem"
            android:textSize="18sp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>