<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.HomeActivity">

    <TextView
        android:id="@+id/etMainEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/username"
        android:layout_gravity="center"
        android:visibility="gone"
        android:textStyle="bold"
        android:textSize="17sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/hello"
        android:layout_gravity="center"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/etMainName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/name"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="17sp"/>

</LinearLayout>